Bug 14005 - 'net ads dns unregister --help' shows wrong description
Summary: 'net ads dns unregister --help' shows wrong description
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Tools (show other bugs)
Version: 4.10.4
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-24 10:03 UTC by Amit Kumar
Modified: 2020-12-23 16:33 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Amit Kumar 2019-06-24 10:03:51 UTC
# /usr/local/samba/bin/net ads dns unregister --help
Usage:
net ads dns unregister [hostname]
    Register hostname with DNS         <<<<<<<<<<<<

# /usr/local/samba/bin/net ads dns register --help
Usage:
net ads dns register [hostname [IP [IP...]]]
    Register hostname with DNS
Comment 2 Björn Jacke 2020-12-23 16:33:58 UTC
this bug should have been closed after the fix was pushed.